@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+30-Jul-2009 Ercan Ozkaya
+ + Added method registry for JHtml
+
 29-Jul-2009 Gergo Erdosi
  + [#17091] Enabling installing front-end languages for plugins
 
